tests/golden/diagnostics/borrow.txt
error[NQ-BORROW-001]: use of moved value `bucket`
  --> diag_borrow.nq:14:10
   |     take(bucket);
   |          ^^^^^^